
[tool.poetry]
name = "lianke-printing"
version = "0.0.1"
description = "链科打印服务"

license = "MIT"

authors = [
    "chenweijiang <chenweijiang@liankenet.com>"
]

repository = "https://github.com/liankenet/cloud_printer_demo"
homepage = "https://www.liankenet.com"

# README file(s) are used as the package description
readme = ["README.md", "LICENSE"]

# Keywords (translated to tags on the package index)
keywords = ["lianke-printing"]


[tool.poetry.dependencies]
# Compatible Python versions
python = ">=3.7,<4"
# Dependency with extras
requests = { version = ">=2.28", extras = ["security"] }


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.6"

[tool.poetry.group.test.dependencies]
# Cachy frozen to test backwards compatibility for `poetry.utils.cache`.
pytest = "^7.1"
pytest-cov = "^4.0"
pytest-mock = "^3.9"
pytest-randomly = "^3.12"
pytest-xdist = { version = "^3.1", extras = ["psutil"] }

[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38']
